// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly when search has yet to be triggered 1`] = `
<BasicSection>
  <SectionHeading>
    <span>
      Quick
    </span>
     Search
  </SectionHeading>
  <Connect(ReduxForm)
    onSubmit={[Function]}
  />
  <AltBackgroundSection
    className="src-modules-search-pages-results__results-container"
  >
    <FadeTransition
      appear={true}
      in={false}
      mountOnEnter={true}
      unmountOnExit={true}
    >
      <SearchResults
        dateStr="2018/01/01"
        isAllSearch={false}
        items={null}
        onMoreResultsClick={[Function]}
        onPageClick={[Function]}
        skip={0}
        take={0}
        total={100}
      />
    </FadeTransition>
  </AltBackgroundSection>
</BasicSection>
`;

exports[`should render correctly when search is in progress 1`] = `
<BasicSection>
  <SectionHeading>
    <span>
      Quick
    </span>
     Search
  </SectionHeading>
  <Connect(ReduxForm)
    onSubmit={[Function]}
  />
  <AltBackgroundSection
    className="src-modules-search-pages-results__results-container"
  >
    <BoxesLoader
      size="large"
      type="default"
    />
    <FadeTransition
      appear={true}
      in={false}
      mountOnEnter={true}
      unmountOnExit={true}
    >
      <SearchResults
        dateStr="2018/01/01"
        isAllSearch={false}
        items={
          Array [
            SummaryVenue {},
          ]
        }
        onMoreResultsClick={[Function]}
        onPageClick={[Function]}
        skip={10}
        take={20}
        total={100}
      />
    </FadeTransition>
  </AltBackgroundSection>
</BasicSection>
`;

exports[`should render correctly when search returned no results 1`] = `
<BasicSection>
  <SectionHeading>
    <span>
      Quick
    </span>
     Search
  </SectionHeading>
  <Connect(ReduxForm)
    onSubmit={[Function]}
  />
  <AltBackgroundSection
    className="src-modules-search-pages-results__results-container"
  >
    <SearchNoResults
      entityType="venue"
      onTryAllClick={[Function]}
    />
    <FadeTransition
      appear={true}
      in={false}
      mountOnEnter={true}
      unmountOnExit={true}
    >
      <SearchResults
        dateStr="2018/01/01"
        isAllSearch={false}
        items={Array []}
        onMoreResultsClick={[Function]}
        onPageClick={[Function]}
        skip={10}
        take={20}
        total={100}
      />
    </FadeTransition>
  </AltBackgroundSection>
</BasicSection>
`;

exports[`should render correctly when search returned no results and there are no result params 1`] = `
<BasicSection>
  <SectionHeading>
    <span>
      Quick
    </span>
     Search
  </SectionHeading>
  <Connect(ReduxForm)
    onSubmit={[Function]}
  />
  <AltBackgroundSection
    className="src-modules-search-pages-results__results-container"
  >
    <SearchNoResults
      entityType={null}
      onTryAllClick={[Function]}
    />
    <FadeTransition
      appear={true}
      in={false}
      mountOnEnter={true}
      unmountOnExit={true}
    >
      <SearchResults
        dateStr="2018/01/01"
        isAllSearch={false}
        items={Array []}
        onMoreResultsClick={[Function]}
        onPageClick={[Function]}
        skip={0}
        take={0}
        total={100}
      />
    </FadeTransition>
  </AltBackgroundSection>
</BasicSection>
`;

exports[`should render correctly when search returned results 1`] = `
<BasicSection>
  <SectionHeading>
    <span>
      Quick
    </span>
     Search
  </SectionHeading>
  <Connect(ReduxForm)
    onSubmit={[Function]}
  />
  <AltBackgroundSection
    className="src-modules-search-pages-results__results-container"
  >
    <FadeTransition
      appear={true}
      in={true}
      mountOnEnter={true}
      unmountOnExit={true}
    >
      <SearchResults
        dateStr="2018/01/01"
        isAllSearch={false}
        items={
          Array [
            SummaryVenue {},
          ]
        }
        onMoreResultsClick={[Function]}
        onPageClick={[Function]}
        skip={10}
        take={20}
        total={100}
      />
    </FadeTransition>
  </AltBackgroundSection>
</BasicSection>
`;
